@@ -1,0 +1,16 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+    
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+    <title>FirePHP</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <link rel="stylesheet" href="chrome://firephp/skin/VariablePanels.css"></link>
+    <style>
+    BODY {
+    	background-color: #eeeeee;
+    }
+    </style>
+</head>
+<body><table id="table"></table></body>
+</html>
